--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
             <!-- <i class="fas fa-search" id="search-btn"></i>-->
             <i class="fas fa-user" id="login-btn"></i>
             <i class="fas fa-sign-out-alt"></i>
-
+            <i class="fas fa-bell" id="bell"></i>
         </div>
         <!--<form action="" class="search-bar-container">
             <input type="text" id="search-bar" placeholder="Search here...">
@@ -45,15 +45,15 @@
         <i class="fas fa-times" id="form-close"></i>
         <form action="">
             <h3>login</h3>
+            <h5 class="message"></h5>
             <input type="email" class="box" placeholder="enter your email">
             <input type="password" class="box" placeholder="enter your password">
             <input type="submit" value="login now" class="btn">
-            <h3></h3>
-
             <p>don't have an account? <a href="#register" id="regi">register now</a></p>
         </form>
         <form action="" class="register">
             <h3>register</h3>
+            <h5 class="message"></h5>
             <input type="text" class="box" placeholder="enter yor first name" required>
             <input type="text" class="box" placeholder=" enter your last name">
             <input type="text" class="box" placeholder=" enter your user name">
@@ -65,6 +65,17 @@
             <p>already register? <a href="#login" id="login">login now</a></p>
 
         </form>
+    </div>
+    <div class="notification" id="notification">
+       <div class="box"><span class="box-content">product name</span> <span class="box-content"> delivery status </span></div>
+       <div class="box"><span class="box-content">product name</span> <span class="box-content"> delivery status </span></div>
+       <div class="box"><span class="box-content">product name</span> <span class="box-content"> delivery status </span></div>
+       <div class="box"><span class="box-content">product name</span> <span class="box-content"> delivery status </span></div>
+       <div class="box"><span class="box-content">product name</span> <span class="box-content"> delivery status </span></div>
+       <div class="box"><span class="box-content">product name</span> <span class="box-content"> delivery status </span></div>
+       <div class="box"><span class="box-content">product name</span> <span class="box-content"> delivery status </span></div>
+       <div class="box"><span class="box-content">product name</span> <span class="box-content"> delivery status </span></div>
+
     </div>
     <!--home section -->
     <section class="home" id="home">
